[package]
name = "cses-rs"
description = "CSES Problem Set Solutions"
authors = ["Rostyslav Bohomaz <rostyslav.db@gmail.com>"]
publish = false
license = "MIT"

# https://cses.fi/howto/
edition = "2018"
rust-version = "1.70"

[dependencies]
rand = "0.8.4"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
